--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/values/global_app_settings.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/values/global_app_settings.xml
@@ -42,7 +42,7 @@
     <bool name="enable_emoji">true</bool>
 
     <!-- Enable Static Emoji -->
-    <bool name="enable_static_emoji">true</bool>
+    <bool name="enable_static_emoji">false</bool>
     
     <!-- Enable WEB RETCi -->
     <bool name="enable_web_rtc">false</bool>
