--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/activity_splash.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/activity_splash.xml
@@ -6,7 +6,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_launcher"
+        android:src="@drawable/splash_icon"
         android:layout_centerInParent="true"/>
 
 </RelativeLayout>
