--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/activity_login.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/activity_login.xml
@@ -24,7 +24,7 @@
         <View
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:background="@drawable/ic_launcher"/>
+            android:background="@drawable/splash_icon"/>
 
         <TextView
             android:layout_width="wrap_content"
