--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/activity_chat.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/activity_chat.xml
@@ -446,6 +446,11 @@
             android:background="@drawable/shadow_gradient" />
     </RelativeLayout>
 
+    <View android:id="@+id/hideSettingView"
+          android:layout_width="match_parent"
+          android:visibility="gone"
+          android:layout_height="match_parent"/>
+
     <ListView
         android:id="@+id/settings_list_view"
         android:layout_width="200dp"
