--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/activity_other_profile.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/activity_other_profile.xml
@@ -45,7 +45,7 @@
             android:padding="10dp"
             android:scaleType="fitCenter"
             android:src="@drawable/icon_info"
-            android:visibility="visible" />
+            android:visibility="gone" />
     </RelativeLayout>
 
     <ScrollView
@@ -68,6 +68,7 @@
                     android:layout_height="220dp"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="30dp"
+                    android:scaleType="centerCrop"
                     android:background="@drawable/circle_with_white_border"
                     tools:src="@drawable/white_circle" />
 
