--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/fragment_profile.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/fragment_profile.xml
@@ -18,6 +18,7 @@
             android:id="@+id/profileImage"
             android:layout_width="220dp"
             android:layout_height="220dp"
+            android:scaleType="centerCrop"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="30dp"
             android:background="@drawable/circle_with_white_border"
