--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/sidebar_layout.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/sidebar_layout.xml
@@ -27,6 +27,7 @@
             <com.medicbleep.app.chat.views.RoundImageView
                 android:id="@+id/userImage"
                 android:layout_width="match_parent"
+                android:scaleType="centerCrop"
                 android:src="@drawable/default_user_image"
                 android:layout_height="match_parent"
                 android:contentDescription="@null" />
