email and phone fields

--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/activity_forgot_password.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/activity_forgot_password.xml
@@ -69,6 +69,7 @@
             android:layout_toRightOf="@id/tvRequiredStar"
             android:background="@drawable/et_background"
             android:hint="@string/email_address"
+            android:inputType="textEmailAddress"
             android:maxLines="1"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
