--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/activity_login.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/activity_login.xml
@@ -66,6 +66,7 @@
             android:textSize="16sp"
             android:textColor="@color/medic_bleep_text_gray"
             android:hint="@string/email_address"
+            android:inputType="textEmailAddress"
             android:textColorHint="@color/medic_bleep_hint_gray"
             android:background="@drawable/et_background"
             android:id="@+id/username"
