Round Images Aspect Fix

--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/item_invite_person.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/item_invite_person.xml
@@ -28,6 +28,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginLeft="10dp"
+                android:scaleType="centerCrop"
                 android:contentDescription="@null" />
             <!--
                 <com.medicbleep.app.chat.views.RoundCornersImageView
