--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/item_lobby.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/item_lobby.xml
@@ -23,6 +23,7 @@
             android:layout_marginTop="10dp"
             android:contentDescription="@null"
             android:padding="1dp"
+            android:scaleType="centerCrop"
             android:src="@drawable/default_user_image" />
 
         <TextView
