--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/item_person.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/item_person.xml
@@ -24,6 +24,7 @@
                 android:layout_height="35dp"
                 android:layout_centerInParent="true"
                 android:contentDescription="@null"
+                android:scaleType="centerCrop"
                 tools:src="@drawable/default_user_image" />
         </RelativeLayout>
 
