--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/fragment_profile.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/fragment_profile.xml
@@ -44,6 +44,7 @@
             android:id="@+id/addPhoto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:layout_alignRight="@id/profileImage"
             android:layout_alignTop="@id/profileImage"
             android:layout_marginRight="-25dp"
