--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/activity_splash.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/activity_splash.xml
@@ -4,9 +4,30 @@
     android:background="@color/white">
 
     <ImageView
+        android:id="@+id/splash_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/splash_icon"
         android:layout_centerInParent="true"/>
+
+    <ProgressBar
+        android:id="@+id/splash_spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:layout_below="@+id/splash_logo"
+        android:layout_marginTop="15dp"
+        android:layout_centerInParent="true"
+        android:progressDrawable="@drawable/splash_progress_green"/>
+
+    <TextView
+        android:id="@+id/splash_text"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_below="@id/splash_spinner"
+        android:layout_centerInParent="true"
+        android:text="Please wait until we have found your location"
+        android:textColor="@color/default_green_light"/>
 
 </RelativeLayout>
